--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,11 @@
 # Created by https://www.gitignore.io/api/java,maven,eclipse,intellij+all,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=java,maven,eclipse,intellij+all,visualstudiocode
 
+
+# Default ignored files
+/shelf/
+/workspace.xml
+
 .metadata
 bin/
 tmp/
